package com.you.lld.problems.linkedin.model;
public enum PostVisibility { PUBLIC, CONNECTIONS_ONLY, PRIVATE }